package top.codexvn.enums;

public enum ArchEnum {
    X86,
    X64,
    S390X,
    PPC64LE,
    AARCH64,
    ARM32,
    UNKNOWN
}
