package top.codexvn.enums;

public enum OSEnum {
    LINUX,
    ALPINE,
    WINDOWS,
    MACOS,
    UNKNOWN
}
