package top.codexvn.enums;

public enum PackageTypeEnum {
    ZIP,
    TARGZ,
    UNKNOWN
}
